k8s/base/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
        tier: backend
        track: stable
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        volumeMounts:
        - name: sonarr-persistent-storage
          mountPath: /config
          subPath: sonarr/config
        - name: sonarr-persistent-storage
          mountPath: /tv
          subPath: tv/
        - name: sonarr-persistent-storage
          mountPath: /downloads
          subPath: downloads/
      volumes:
      - name: sonarr-persistent-storage
        persistentVolumeClaim:
          claimName: home-server-pvc
