k8s/base/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
    tier: backend
  ports:
  - protocol: TCP
    port: 8989
